[metadata]
name = aul_compiler
version = 1.0.0
author = Andrew Chen
author_email = andrewchen10@gmail.com
description = The official compiler of a language designed to annoy you
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/actiniumn404/Annoyingly-Uncodeable-Language
project_urls =
    Bug Tracker = https://github.com/actiniumn404/Annoyingly-Uncodeable-Language/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src